<resources>
    <string name="app_name">TP3-DR2</string>
    <string name="app_intro">Analisador de Perfil de Investidores</string>
    <string name="app_init">Iniciar análise</string>
    <string name="app_credits">Créditos para o Grupo Paulista:</string>
    <string name="app_credits_link">www.bancopaulista.com.br/Arquivos/QuestionarioAPI.pdf</string>
    <string name="nome">Nome</string>
    <string name="app_start">Cadastrar</string>
    <string name="proxima">Proxima</string>
    <string name="anterior">Anterior</string>
    <string name="soma">Obs: Efetue a somatória dos pontos referente a questão acima e escolha a alternativa equivalente</string>
    <string name="zuponto">Entre 0 e 1 ponto</string>
    <string name="dqponto">Entre 2 e 4 pontos</string>
    <string name="mcponto">Acima de 5 pontos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
